--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"/>
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-lg text-right" style="background-color: #46902B">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand">
             <img src="./logo-site.png" alt="logotipo da Raízes da Liberdade">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,12 +30,12 @@
                 <a class="nav-link active" aria-current="page" href="apoiadores.html" target="_blank">Seja um apoiador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#contato">Entre em contato</a>
+                <a class="nav-link active" aria-current="page" href="#">Entre em contato</a>
               </li>
               </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Busca" aria-label="Busca">
-              <button class="btn btn-secondary" type="submit">Busca</button>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Busca" aria-label="Busca">
+                <button type="button" class="btn btn-dark">Busca</button>
             </form>
           </div>
         </div>
@@ -44,15 +45,15 @@
 
 <main>
 
-  <section class="banners foto-1 d-flex flex-column justify-content-center text-center">
+  <section class="banners foto-1 d-flex flex-column justify-content-top text-center">
       <div class="banners-titulo py-5">
-        <h2 class="fw-bold"></h2>
-        <p></p>
+        <h1 class="fw-bold text-light py-9">Raizes da Liberdade</h1>
+        <p class="text-light">aqui é para escrever algo? </p>
       </div>
     </section>
 
-    <div class="contato text-center ty py-5">
-      <h1 class="font-family">Entre em contato conosco</h1>
+    <div class="container contato text-center ty py-5">
+      <h1 class="font-family">Entre em contato</h1>
     </div>
     
     <div class="form-floating mb-3">
@@ -70,10 +71,9 @@
       <label for="floatingInput">Número</label>
     </div>
 
-    <div class="d-grid gap-2">
+    <div class="checkbox d-grid gap-2">
       <button class="btn btn-primary" style="background-color:#01271F" type="button">Enviar</button>
       </div>
-
 
       
 </main>
@@ -83,17 +83,16 @@
 </body>
 
 <footer class="text-center">
-<section class="container p-0">
-  <i class="btn bi bi-envelope"><a href="#"></a></i>
-  <i class="btn bi bi-instagram"><a href="#"></a></i>
-  <i class="btn bi bi-twitter-x"><a href="#"></a></i>
-<div class="py-5 text-center" style="background-color: #FDDA40;">
-  <p>2024 <i class="bi bi-c-circle"></i> Desenvolvido por Raizes da Liberdade. Todos os direitos reservados.</p>
+  <section class="container p-4 pb-0">
+    <i class="btn bi bi-whatsapp"><a href="#"></a></i>
+    <i class="btn bi bi-instagram"><a href="#"></a></i>
+    <i class="btn bi bi-twitter"><a href="#"></a></i>
+    <div class="p-3 text-center">
+      <p>2024 <i class="bi bi-c-circle"></i> Desenvolvido por Raízes da Liberdade. Todos os direitos reservados.</p>
 
-</div>
-</section>
-</footer>
-
+    </div>
+  </section>
 
 </footer>
+
 </html>
