--- a/sobreNos.html
+++ b/sobreNos.html
@@ -6,8 +6,41 @@
     <title>Sobre nós - Raizes da Liberdade</title>
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg text-right" style="background-color: #46902B">
+            <a class="navbar-brand">
+                <img src="./logo-site.png" alt="logotipo da Raízes da Liberdade">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="sobreNos.html" target="_blank">Sobre nós</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="conhecaProjetos.html" target="_blank">Conheça nossos Projetos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="apoiadores.html" target="_blank">Seja um apoiador</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Entre em contato</a>
+                  </li>
+                  </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Busca" aria-label="Busca">
+                  <button class="btn btn-secondary" type="submit">Busca</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    
+    </header>
     
 </body>
 </html>
